mise en place du templating de base création des modals pour s'inscrire et se connecter inscription fonctionnelle back manque le hachage des données

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-<%- body %>
+<%- include('../partials/header') %>
+<%- include('../partials/SignInModal') %>
+<%- include('../partials/LoginModal') %>
 
+<%- body %>
+<%- include('../partials/footer') %>
 </body>
 
+    <script src="/js/modal.js" ></script>
 </html>
 
 
