hashage du mot de passe avec bcrypt

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -56,6 +56,9 @@ a:hover {
 MODAL
 * * * * * * * * * * * * * * * * * * * * * * *  */
 
+#afterSign {
+    display: none;
+}
 .modal {
     display: none;
     position: fixed;
