--- a/views/partials/LoginModal.ejs
+++ b/views/partials/LoginModal.ejs
@@ -1,7 +1,10 @@
-
 <div class="modal" id="loginModal">
     <div class="modal-overlay"></div>
     <div class="modal-dialog">
+        <div id="afterSign">
+            <p>Inscription validé <br>
+                Connectez-vous pour Jouer </p>
+        </div>
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Login </h5>
