--- a/views/partials/LoginModal.ejs
+++ b/views/partials/LoginModal.ejs
@@ -11,7 +11,7 @@
                 <button class="close" id="closeModalLogin">&times;</button>
             </div>
             <div class="modal-body" id="loginModalBody">
-                <form action="/signup" method="post">
+                <form action="/login" method="post">
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email">
                     <label for="password">Password</label>
