processus de fin de jeu mis en place

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,3 +109,18 @@ MODAL
     height: 100%;
 }
 
+/* * * * * * * * * * * * * * * * * * * * * * * *,
+GAME
+* * * * * * * * * * * * * * * * * * * * * * *  */
+
+.game#false {
+    display: none;
+}
+
+.finish#false {
+    display: block;
+}
+
+.finish#true {
+    display: none;
+}
