affichage des stats

--- a/views/pages/game.ejs
+++ b/views/pages/game.ejs
@@ -20,3 +20,5 @@
     <p>  si vous avez gagner un mail vous a était envoyer avec un code pour récupérer vos gains en boulangerie</p>
 </section>
 <script src="/js/Game.js"></script>
+
+<%- include('stat')%>
